<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">


        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200sp"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/btColor2"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/passmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:layout_below="@+id/pass"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textSize="14dp"
            android:textColor="@color/colorPrimary"
            />



            <EditText
                android:id="@+id/email"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="20sp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/passmsg"
                android:hint="@string/hint_email"
                android:layout_centerHorizontal="true"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@color/btColor2" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_below="@+id/email"
            android:text="@string/btn_reset_password"
            android:background="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/btColor2"
            android:layout_below="@+id/btn_reset_password"
            android:layout_centerHorizontal="true"/>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>